Thu Feb  5 12:31:05 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (ci_missing_reason): return the reason of method
	  missing in call info.

	* vm_insnhelper.c (vm_call_opt_send): re-apply r49500 with the
	  proper missing reason.  [Bug #10828]

Thu Feb  5 10:31:46 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* class.c (rb_obj_singleton_methods): should use RTEST() to convert
	  VALUE to int.

Thu Feb  5 03:59:33 2015  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* vm_insnhelper.c: Fix symbol leak with +send+ [Bug #10828]

Wed Feb  4 20:26:54 2015  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (Init_win32ole): should not use atexit to
	  free allocated hash table to avoid error on Cygwin.

Wed Feb  4 15:34:25 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* class.c (method_entry_i, class_instance_method_list,
	  rb_obj_singleton_methods): should not include methods of
	  superclasses if recur is false. [ruby-dev:48854] [Bug #10826]

Wed Feb  4 16:32:40 2015  Matt Hoyle  <matt@deployable.co>

	* ext/bigdecimal/bigdecimal.c (VpSetPTR): fix a typo, 'expoennt'
	  to 'exponent'.  [ruby-core:67980] [Bug #10823] [Fix GH-825]

Wed Feb  4 15:55:38 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/sdbm/_sdbm.c: include ruby/ruby.h for PRIdPTRDIFF when a
	  macro `DEBUG` is defined.  based on the patch by Owen Rodley in
	  [ruby-core:67987]. [Bug #10825]

Wed Feb  4 11:12:43 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in (probes.stamp): rebuild dtrace dependent objects
	  only when `dtrace -G` modifies its input files.

Tue Feb  3 19:27:16 2015  Naohisa Goto  <ngotogenome@gmail.com>

	* common.mk (ruby-glommed.o): dependency on $(OBJ) should be written
	  in common.mk (in which OBJ is defined) because of Makefile include
	  and parse order. This partly reverts r49419.
	  [ruby-dev:48849] [Bug #10808]

	* Makefile.in (ruby-glommed.o): ditto.

	* Makefile.in (ruby-glommed.o): remove excess $(DTRACE_OBJ) because